<resources>
    <string name="app_name">Dossier</string>
    <string name="change">Change to አማርኛ</string>
    <string name="chang_en">Change to English</string>
    <string name="form_results">Form Results</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="phone_number">Mobile Phone Number</string>
    <string name="register_account">REGISTER ACCOUNT</string>
    <string name="email">Email</string>
    <string name="gender_type">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_your_age">Select your Age</string>
    <string name="department">Work Department</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>

    <!-- departments-->
    <string-array name="department">
        <item>Programmer</item>
        <item>UI Designer</item>
        <item>UX Designer</item>
        <item>System Developer</item>
    </string-array>
</resources>